feat: update schematics

--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,11 @@
   "projects": {
     "angular-christmas-calendar": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "changeDetection": "OnPush"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "xmas",
