--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "format:check": "npx prettier --check \"src/**/*.+(ts|html|scss)\"",
+    "format:write": "npx prettier --write \"src/**/*.+(ts|html|scss)\"",
+    "lint": "npx eslint ./src",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -33,12 +37,19 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
+    "eslint": "^8.54.0",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^4.1.0",
+    "husky": "^8.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.1.0",
     "typescript": "~5.2.2"
   }
 }
