--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "format:check": "npx prettier --check \"src/**/*.+(ts|html|scss)\"",
-    "format:write": "npx prettier --write \"src/**/*.+(ts|html|scss)\"",
+    "format:check": "npx prettier --check \"src/**/*.+(ts|html|css)\"",
+    "format:write": "npx prettier --write \"src/**/*.+(ts|html|css)\"",
     "lint": "npx eslint ./src",
     "prepare": "husky install"
   },
