--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.0",
+    "@netlify/angular-runtime": "^2.2.1",
     "express": "^4.21.1",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
