--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,11 @@
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
-    "moduleResolution": "node16",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "importHelpers": true,
     "target": "ES2022",
-    "module": "node16",
+    "module": "ES2022",
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
