--- a/package.json
+++ b/package.json
@@ -14,43 +14,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
-    "@angular/cdk": "^19.0.0",
-    "@angular/common": "^19.0.0",
-    "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
-    "@angular/platform-browser": "^19.0.0",
-    "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/platform-server": "^19.0.0",
-    "@angular/router": "^19.0.0",
-    "@angular/ssr": "^19.0.0",
-    "express": "^4.21.1",
-    "rxjs": "^7.8.1",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "@angular/animations": "19.0.0",
+    "@angular/cdk": "19.0.0",
+    "@angular/common": "19.0.0",
+    "@angular/compiler": "19.0.0",
+    "@angular/core": "19.0.0",
+    "@angular/forms": "19.0.0",
+    "@angular/platform-browser": "19.0.0",
+    "@angular/platform-browser-dynamic": "19.0.0",
+    "@angular/platform-server": "19.0.0",
+    "@angular/router": "19.0.0",
+    "@angular/ssr": "19.0.0",
+    "express": "4.21.1",
+    "rxjs": "7.8.1",
+    "tslib": "2.3.0",
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.0",
-    "@angular/cli": "^19.0.0",
-    "@angular/compiler-cli": "^19.0.0",
-    "@netlify/angular-runtime": "^2.2.1",
-    "@types/express": "^4.17.21",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.19.64",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.57.1",
-    "eslint-config-angular": "^0.5.0",
-    "eslint-plugin-angular": "^4.1.0",
-    "husky": "^8.0.3",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "^3.1.0",
-    "typescript": "~5.5.4"
+    "@angular-devkit/build-angular": "19.0.0",
+    "@angular/cli": "19.0.0",
+    "@angular/compiler-cli": "19.0.0",
+    "@netlify/angular-runtime": "2.2.1",
+    "@types/express": "4.17.21",
+    "@types/jasmine": "5.1.0",
+    "@types/node": "18.19.64",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "eslint": "8.57.1",
+    "eslint-config-angular": "0.5.0",
+    "eslint-plugin-angular": "4.1.0",
+    "husky": "8.0.3",
+    "jasmine-core": "5.1.0",
+    "karma": "6.4.0",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "prettier": "3.1.0",
+    "typescript": "5.5.4"
   }
 }
