--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "format:check": "prettier --check \"src/**/*.+(ts|html|css|json)\"",
-    "format:write": "prettier --write \"src/**/*.+(ts|html|css|json)\"",
-    "prepare": "husky install"
+    "format:write": "prettier --write \"src/**/*.+(ts|html|css|json)\""
   },
   "private": true,
   "dependencies": {
@@ -37,7 +36,6 @@
     "@types/express": "5.0.0",
     "@types/jasmine": "5.1.5",
     "@types/node": "20.17.9",
-    "husky": "9.1.7",
     "jasmine-core": "5.4.0",
     "karma": "6.4.4",
     "karma-chrome-launcher": "3.2.0",
