--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "serve": "serve --single ./dist/angular-christmas-calendar/browser",
     "format:check": "prettier --check \"src/**/*.+(ts|html|css|json)\"",
     "format:write": "prettier --write \"src/**/*.+(ts|html|css|json)\""
   },
@@ -34,6 +35,7 @@
     "@types/express": "5.0.0",
     "@types/node": "20.17.9",
     "prettier": "3.4.1",
+    "serve": "14.2.4",
     "typescript": "5.6.3"
   }
 }
