refactor: add eslint & lint src folder & fix problems

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "serve": "serve --single ./dist/angular-christmas-calendar/browser",
     "format:check": "prettier --check \"src/**/*.+(ts|html|css|json)\"",
-    "format:write": "prettier --write \"src/**/*.+(ts|html|css|json)\""
+    "format:write": "prettier --write \"src/**/*.+(ts|html|css|json)\"",
+    "lint": "eslint ./src"
   },
   "private": true,
   "dependencies": {
@@ -31,11 +32,18 @@
     "@angular-devkit/build-angular": "19.0.2",
     "@angular/cli": "19.0.2",
     "@angular/compiler-cli": "19.0.1",
+    "@eslint/js": "9.15.0",
     "@netlify/angular-runtime": "2.2.1",
+    "@nx/eslint-plugin": "20.1.4",
     "@types/express": "5.0.0",
     "@types/node": "20.17.9",
+    "@typescript-eslint/utils": "8.16.0",
+    "angular-eslint": "18.4.2",
+    "eslint": "9.15.0",
+    "eslint-config-prettier": "9.1.0",
     "prettier": "3.4.1",
     "serve": "14.2.4",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "typescript-eslint": "8.16.0"
   }
 }
