--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "serve --single ./dist/angular-christmas-calendar/browser",
     "format:check": "prettier --check \"src/**/*.+(ts|html|css|json)\"",
     "format:write": "prettier --write \"src/**/*.+(ts|html|css|json)\"",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -41,6 +42,7 @@
     "angular-eslint": "18.4.2",
     "eslint": "9.15.0",
     "eslint-config-prettier": "9.1.0",
+    "husky": "9.1.7",
     "prettier": "3.4.1",
     "serve": "14.2.4",
     "typescript": "5.6.3",
