--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "9.15.0",
     "eslint-config-prettier": "9.1.0",
     "husky": "9.1.7",
+    "nano-staged": "0.8.0",
     "prettier": "3.4.1",
     "serve": "14.2.4",
     "typescript": "5.6.3",
