refactor: use strictStandalone compiler option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,13 @@
     "target": "ES2022",
     "module": "ES2022",
     "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictStandalone": true
   }
 }
