--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "@angular/ssr": "19.0.2",
     "express": "5.0.1",
     "rxjs": "7.8.1",
-    "tslib": "2.8.1",
-    "zone.js": "0.15.0"
+    "tslib": "2.8.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "19.0.2",
@@ -48,5 +47,6 @@
     "serve": "14.2.4",
     "typescript": "5.6.3",
     "typescript-eslint": "8.16.0"
-  }
+  },
+  "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
