feat(ssr): setup ssr with Fastify

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,10 @@
             "styles": ["src/styles.css"],
             "scripts": [],
             "server": "src/main.server.ts",
-            "outputMode": "static"
+            "outputMode": "server",
+            "ssr": {
+              "entry": "src/server.ts"
+            }
           },
           "configurations": {
             "production": {
